# Metagenomic-Binning

./: README.md
Binning_project/: pyproject.toml
