[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Metagenomic-binning"
version = "1.0.0"
description = "A metagenomic binning tool using k-mer similarity, coverage difference, and community detection"
authors = [
    { name = "Khuanwara Potiwara", email = "ajjkhuanwara@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=2.0.0,<2.3.1",
    "numpy>=1.20,<2.3.0",
    "networkx>=3.0,<3.6",
    "biopython>=1.78,<2.0",
    "scikit-learn>=1.2,<1.8"
]

[project.scripts]
binning-run = "Binning_project.Binning_Main:main"
